--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -1,7 +1,8 @@
 ↑convertigo: 8.0.0.m006
 ↓lib_fill_odt_pdf [core.Project]: 
-  comment: ODFToolkit library
-  version: 1.0
+  comment: ODFToolkit and PDF library
+  version: 1.1
   ↓void [connectors.SqlConnector]: 🗏 connectors/void.yaml
+  ↓clean_outputs [sequences.GenericSequence]: 🗏 sequences/clean_outputs.yaml
   ↓fill_odt [sequences.GenericSequence]: 🗏 sequences/fill_odt.yaml
   ↓fill_pdf [sequences.GenericSequence]: 🗏 sequences/fill_pdf.yaml
