--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -1,13 +1,15 @@
 ↑convertigo: 8.0.0.m006
 ↓lib_fill_odt_pdf [core.Project]: 
   comment: ODFToolkit and PDF library
-  version: 1.9.4
+  version: 1.9.5
   ↓void [connectors.SqlConnector]: 🗏 connectors/void.yaml
   ↓clean_outputs [sequences.GenericSequence]: 🗏 sequences/clean_outputs.yaml
   ↓demo_u_fill_odt [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_odt.yaml
   ↓demo_u_fill_pdf [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_pdf.yaml
   ↓fill_odt [sequences.GenericSequence]: 🗏 sequences/fill_odt.yaml
   ↓fill_pdf [sequences.GenericSequence]: 🗏 sequences/fill_pdf.yaml
+  ↓getInstalledFonts [sequences.GenericSequence]: 🗏 sequences/getInstalledFonts.yaml
+  ↓init_config [sequences.GenericSequence]: 🗏 sequences/init_config.yaml
   ↓u_create_odt [sequences.GenericSequence]: 🗏 sequences/u_create_odt.yaml
   ↓u_fill_odt [sequences.GenericSequence]: 🗏 sequences/u_fill_odt.yaml
   ↓u_fill_pdf [sequences.GenericSequence]: 🗏 sequences/u_fill_pdf.yaml
