--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -6,6 +6,7 @@
   ↓clean_outputs [sequences.GenericSequence]: 🗏 sequences/clean_outputs.yaml
   ↓demo_u_fill_odt [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_odt.yaml
   ↓demo_u_fill_pdf [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_pdf.yaml
+  ↓demo_u_fill_table_odt [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_table_odt.yaml
   ↓fill_odt [sequences.GenericSequence]: 🗏 sequences/fill_odt.yaml
   ↓fill_pdf [sequences.GenericSequence]: 🗏 sequences/fill_pdf.yaml
   ↓getInstalledFonts [sequences.GenericSequence]: 🗏 sequences/getInstalledFonts.yaml
