--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -7,6 +7,7 @@
   ↓demo_u_fill_odt [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_odt.yaml
   ↓demo_u_fill_pdf [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_pdf.yaml
   ↓demo_u_fill_table_odt [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_table_odt.yaml
+  ↓demo_u_fill_table_template_odt [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_table_template_odt.yaml
   ↓fill_odt [sequences.GenericSequence]: 🗏 sequences/fill_odt.yaml
   ↓fill_pdf [sequences.GenericSequence]: 🗏 sequences/fill_pdf.yaml
   ↓getInstalledFonts [sequences.GenericSequence]: 🗏 sequences/getInstalledFonts.yaml
