--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -13,6 +13,7 @@
   ↓getInstalledFonts [sequences.GenericSequence]: 🗏 sequences/getInstalledFonts.yaml
   ↓init_config [sequences.GenericSequence]: 🗏 sequences/init_config.yaml
   ↓metadata_pdf [sequences.GenericSequence]: 🗏 sequences/metadata_pdf.yaml
+  ↓odt2pdf [sequences.GenericSequence]: 🗏 sequences/odt2pdf.yaml
   ↓u_create_odt [sequences.GenericSequence]: 🗏 sequences/u_create_odt.yaml
   ↓u_fill_odt [sequences.GenericSequence]: 🗏 sequences/u_fill_odt.yaml
   ↓u_fill_pdf [sequences.GenericSequence]: 🗏 sequences/u_fill_pdf.yaml
