--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -1,9 +1,10 @@
 ↑convertigo: 8.0.0.m006
 ↓lib_fill_odt_pdf [core.Project]: 
   comment: ODFToolkit and PDF library
-  version: 1.9.13
+  version: 1.9.14
   ↓void [connectors.SqlConnector]: 🗏 connectors/void.yaml
   ↓clean_outputs [sequences.GenericSequence]: 🗏 sequences/clean_outputs.yaml
+  ↓demo_export_data_to_sheet [sequences.GenericSequence]: 🗏 sequences/demo_export_data_to_sheet.yaml
   ↓demo_u_fill_odt [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_odt.yaml
   ↓demo_u_fill_pdf [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_pdf.yaml
   ↓demo_u_fill_table_odt [sequences.GenericSequence]: 🗏 sequences/demo_u_fill_table_odt.yaml
@@ -16,6 +17,7 @@
   ↓odt2pdf [sequences.GenericSequence]: 🗏 sequences/odt2pdf.yaml
   ↓u_create_ods [sequences.GenericSequence]: 🗏 sequences/u_create_ods.yaml
   ↓u_create_odt [sequences.GenericSequence]: 🗏 sequences/u_create_odt.yaml
+  ↓u_export_data_to_sheet [sequences.GenericSequence]: 🗏 sequences/u_export_data_to_sheet.yaml
   ↓u_fill_odt [sequences.GenericSequence]: 🗏 sequences/u_fill_odt.yaml
   ↓u_fill_pdf [sequences.GenericSequence]: 🗏 sequences/u_fill_pdf.yaml
   ↓u_read_odt [sequences.GenericSequence]: 🗏 sequences/u_read_odt.yaml
